# gendalf

./: README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pull-request.yaml
examples/my_greeter/: README.md  client.py  server.py
examples/my_greeter/src/my_service/core/: structure.py
examples/my_greeter/src/my_service/core/greeter/: greeter.py  model.py
examples/my_greeter/src/my_service/db/: queries.sql
examples/type_aliases/src/type_aliases/: notifier.py
src/gendalf/: _typing.py  cli.py  model.py  option.py  string_case.py  traverse.py
src/gendalf/entrypoint/: decorator.py  inspection.py  printer.py
src/gendalf/generator/: abc.py  aiohttp.py  fastapi.py  model.py  sqlcast.py
src/gendalf/generator/dto/: abc.py  mapper.py  pydantic.py  trait.py  traverse.py
src/gendalf/generator/model/: abc.py  builder.py  factory.py
src/gendalf/generator/model/type_inspection/visitor/: abc.py  model.py  trait.py  walker.py
src/gendalf/generator/transport_model/: abc.py  builder.py  factory.py
src/gendalf/generator/transport_model/type_inspection/visitor/: abc.py  model.py  trait.py  walker.py
src/gendalf/sql/: annotator.py  inspector.py  model.py  types.py
tests/: code.py
tests/integration/: test_examples.py  test_generator.py  test_sql.py
tests/unit/: test_generator.py
